<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.knime.maven</groupId>
        <artifactId>ap.parent</artifactId>
        <version>5.10.0</version>
    </parent>

    <groupId>org.knime</groupId>
    <artifactId>knime-gateway</artifactId>
    <version>${revision}${changelist}</version>
    <packaging>pom</packaging>

    <properties>
        <revision>5.11.0</revision>
        <changelist>-SNAPSHOT</changelist>
        <feature-branch-extension.branchListProperty>git.branch</feature-branch-extension.branchListProperty>
        <feature-branch-extension.appendArtifactoryProperties>false</feature-branch-extension.appendArtifactoryProperties>
        <knime.sonar-env>Sonarcloud</knime.sonar-env>
        <sonar.exclusions>
            org.knime.gateway.api/src/generated/**/*,
            org.knime.gateway.impl/src/generated/**/*,
            org.knime.gateway.impl.jsonrpc/src/generated/**/*,
            org.knime.gateway.json/src/generated/**/*
        </sonar.exclusions>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>

    <profiles>
        <profile>
            <id>build</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <modules>
                <module>org.knime.gateway.api</module>
                <module>org.knime.gateway.impl/lib/fetch_jars</module>
                <module>org.knime.gateway.impl</module>
                <module>org.knime.gateway.json</module>
                <module>org.knime.gateway.impl.jsonrpc</module>
                <module>org.knime.gateway.testing.helper</module>
                <module>com.github.briandilley.jsonrpc4j.clfix</module>
                <module>org.knime.features.gateway</module>
                <module>org.knime.update.gateway</module>
            </modules>
        </profile>
        <profile>
            <id>test</id>
            <modules>
                <module>org.knime.gateway.impl/lib/fetch_jars</module>
                <module>org.knime.gateway.api</module>
                <module>org.knime.gateway.api.tests</module>
                <module>org.knime.gateway.json</module>
                <module>org.knime.gateway.json.tests</module>
                <module>org.knime.gateway.impl</module>
                <module>org.knime.gateway.impl.tests</module>
                <module>org.knime.gateway.impl.jsonrpc</module>
                <module>org.knime.gateway.impl.jsonrpc.tests</module>
                <module>org.knime.gateway.testing.helper</module>
            </modules>
            <repositories>
                <repository>
                    <id>p2-knime-core</id>
                    <layout>p2</layout>
                    <url>${knime.core.p2}</url>
                </repository>
                <repository>
                    <id>p2-knime-gateway</id>
                    <layout>p2</layout>
                    <url>${knime.gateway.p2}</url>
                </repository>
                <repository>
                    <id>p2-knime-tp</id>
                    <layout>p2</layout>
                    <url>${knime.tp.p2}</url>
                </repository>
                <repository>
                    <id>p2-knime-shared</id>
                    <layout>p2</layout>
                    <url>${knime.shared.p2}</url>
                </repository>
                <repository>
                    <id>p2-knime-core-ui</id>
                    <url>${knime.core.ui.p2}</url>
                    <layout>p2</layout>
                </repository>
                <repository>
                    <id>p2-knime-workbench</id>
                    <layout>p2</layout>
                    <url>${knime.workbench.p2}</url>
                </repository>
                <repository>
                    <id>p2-knime-base</id>
                    <layout>p2</layout>
                    <url>${knime.base.p2}</url>
                </repository>
                <repository>
                    <id>p2-knime-expressions</id>
                    <layout>p2</layout>
                    <url>${knime.expressions.p2}</url>
                </repository>
                <repository>
                    <id>p2-knime-dev</id>
                    <layout>p2</layout>
                    <url>${knime.dev.p2}</url>
                </repository>
                <repository>
                    <id>p2-knime-product</id>
                    <layout>p2</layout>
                    <url>${knime.product.p2}</url>
                </repository>
                <repository>
                    <id>p2-knime-json</id>
                    <layout>p2</layout>
                    <url>${knime.json.p2}</url>
                </repository>
                <repository>
                    <id>p2-knime-javasnippet</id>
                    <layout>p2</layout>
                    <url>${knime.javasnippet.p2}</url>
                </repository>
                <repository>
                    <id>p2-knime-weka</id>
                    <layout>p2</layout>
                    <url>${knime.weka.p2}</url>
                </repository>
                <repository>
                    <id>p2-knime-distance</id>
                    <layout>p2</layout>
                    <url>${knime.distance.p2}</url>
                </repository>
                <repository>
                    <id>p2-knime-stats</id>
                    <layout>p2</layout>
                    <url>${knime.stats.p2}</url>
                </repository>
                <repository>
                    <id>p2-knime-js-core</id>
                    <layout>p2</layout>
                    <url>${knime.js.core.p2}</url>
                </repository>
                <repository>
                    <id>p2-knime-js-base</id>
                    <layout>p2</layout>
                    <url>${knime.js.base.p2}</url>
                </repository>
                <repository>
                    <id>p2-knime-streaming</id>
                    <layout>p2</layout>
                    <url>${knime.streaming.p2}</url>
                </repository>
                <repository>
                    <id>p2-base-views</id>
                    <layout>p2</layout>
                    <url>${knime.base.views.p2}</url>
                </repository>
                <repository>
                    <id>p2-knime-cef</id>
                    <layout>p2</layout>
                    <url>${knime.cef.p2}</url>
                </repository>
            </repositories>
        </profile>
    </profiles>
    <repositories>
        <repository>
            <id>p2-knime-core</id>
            <layout>p2</layout>
            <url>${knime.core.p2}</url>
        </repository>
        <repository>
            <id>p2-knime-tp</id>
            <layout>p2</layout>
            <url>${knime.tp.p2}</url>
        </repository>
        <repository>
            <id>p2-knime-shared</id>
            <layout>p2</layout>
            <url>${knime.shared.p2}</url>
        </repository>
        <repository>
            <id>p2-knime-core-ui</id>
            <url>${knime.core.ui.p2}</url>
            <layout>p2</layout>
        </repository>
        <repository>
            <id>p2-knime-base</id>
            <layout>p2</layout>
            <url>${knime.base.p2}</url>
        </repository>
        <repository>
            <id>p2-knime-filehandling-core</id>
            <layout>p2</layout>
            <url>${knime.filehandling.core.p2}</url>
        </repository>
        <repository>
            <id>p2-knime-svg</id>
            <layout>p2</layout>
            <url>${knime.svg.p2}</url>
        </repository>
    </repositories>

</project><!-- vim: set shiftwidth=4 expandtab smarttab: -->
